--- a/Documentation/paper.tex
+++ b/Documentation/paper.tex
@@ -101,6 +101,17 @@ There are various bibliography styles available. You can select the style of you
 
 Here are two sample references: \cite{Feynman1963118,Dirac1953888}.
 
+\section{Implemented equations}
+
+\input{apricot.tex}
+
+
+\section{Uncertainty and Sensitivity}
+
+Possible application of the APRICOT code is in the field of uncertainty and Sensitivity analyses. 
+For example methods of Bayesian Integrated Global Uncertainty and Sensitivity Analysis (BIGUSA) \cite{Stano2019} can be applied.
+\cite{SPIRZEWSKI-NED-2019} used it analyse the Critical Heat Flux. 
+
 \section*{References}
 
 \bibliography{mybibfile}
