--- a/Documentation/mybibfile.bib
+++ b/Documentation/mybibfile.bib
@@ -51,3 +51,14 @@ title={Bayesian Integrated Global Uncertainty and Sensitivity Analysis of system
 year={2019},
 month={Jan.},
 }
+
+@article{Murdock,
+title = "Fundamental fluid mechanics for the practicing engineer",
+journal = "CRC Press",
+volume = "331",
+pages = "25 - 27",
+year = "1993",
+isbn = "978-0-8247-8808-7",
+author = "Murdock, James W.",
+}
+ 
