--- a/Documentation/apricot.tex
+++ b/Documentation/apricot.tex
@@ -18,7 +18,7 @@ where:
 \newcommand{\NumDenFGs}
 {
 \begin{displaymath}
-	N_{G} = \rho_{f}*V_{f}*\frac{Bu}{100}*\gamma_{G}*f*\frac{X^{U}}{M^{U}}
+	N_{G} = \rho_{f}\cdot V_{f}\cdot\frac{Bu}{100}\cdot\gamma_{G}\cdot f\cdot\frac{X^{U}}{M^{U}}
 \end{displaymath}
 
 where:
