stress and strain

--- a/Documentation/Pressure.tex
+++ b/Documentation/Pressure.tex
@@ -35,13 +35,11 @@ The constants a and b are different depending on which gas is being analyzed. Th
 
 \NumDenFGs
 
-T\paragraph{Oxygen containing gases} The following empirical expression [Proksch] is used to calculate the amount of oxygen in TRISO fuel:
+\paragraph{Oxygen containing gases} The following empirical expression [Proksch] is used to calculate the amount of oxygen in TRISO fuel:
 
 \PressureProksh 
 
-\paragraph{Ternary gases} To calculate the amount of ternary gases in the fuel, the following expression is used[-]:
-
-- - -
+\paragraph{Ternary fission gases} At this stage the ternary fission gases will not be included in calculations (no related data in benchmark), and this part will be fullfilled later.
 
 
 
