--- a/Documentation/Stress_Strain.tex
+++ b/Documentation/Stress_Strain.tex
@@ -49,7 +49,19 @@ Correlation a)
 \paragraph{Thermal Strain} The radial and tangential thermal strains are calculated using the following formula:
 \StrainThermal 
 
+\paragraph{General equation} Using all the equations mensioned obove, we can obtain the general form of stress-displacement relationship for radial and tangential directions:
+
+\GeneralStrDisRadial
+\GeneralStrDisTangential
+
+
+\linenumbers
+
 \paragraph{Equilibrum equation} The relations between radial and tangential stresses in equilibrium state for the spherical geometries is given by:
 \EquilibrumStress 
+
+\paragraph{Final equation} 
+Now, using general and equilibrum equations, we can get the following equations:
+
 
 \end{document}
