--- a/Documentation/apricot.tex
+++ b/Documentation/apricot.tex
@@ -156,6 +156,21 @@ where:
 \end{itemize}
 }
 
+\newcommand{\GeneralStrDisRadial}
+{
+\begin{displaymath}
+\frac{\partial u}{\partial r} = \frac{1}{E} (\sigma_{r} -2 \mu \sigma_{\theta}) +  K \int(\sigma_{r} -2 \nu \sigma_{\theta})d\Phi + \epsilon_{r}^{sw} + \alpha_{r}\Delta T 
+\end{displaymath}
+}
 
+\newcommand{\GeneralStrDisTangential}
+{
+\begin{displaymath}
+\frac{u}{r}  = \frac{1}{E}((1-\mu) \sigma_{\theta} -\mu \sigma_{r}) +
+K \int((1-\nu)\sigma_{\theta} -\nu \sigma_{r})d\Phi + \epsilon_{\theta}^{sw}+
++ \alpha_{\theta}\Delta T 
+\end{displaymath}
+}
+ 
 
 
